# copper

./: Cargo.toml  README.md  flake.nix
src/: errors.rs  launcher.rs  lib.rs  parser.rs  util.rs
src/assets/structs/: asset_index.rs  launcher_meta.rs  version.rs
src/auth/: mod.rs  structs.rs
tauri-plugin-copper/: Cargo.toml  README.md  package.json
tauri-plugin-copper/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-copper/src/: auth.rs  lib.rs
tauri-plugin-copper/webview-dist/: index.d.ts  index.js
tauri-plugin-copper/webview-src/: index.ts
