[package]
name = "copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Minecraft launcher: rust edition"
documentation = "https://docs.rs/minecraft-rs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/minecraft-rs#readme"
repository = "https://github.com/glowsquid-launcher/minecraft-rs"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = [
  "fs",
  "process",
] }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-retry = "0.3"
futures = "0.3.24"
tracing = "0.1.36"
dunce = "1.0.2"
thiserror = "1.0.37"
itertools = "0.10.5"

# why do you have to do this mojang
[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.11", features = ["kernel"] }
