[package]
name = "tauri-plugin-copper"
version = "0.0.0"
authors = [ "suyashtnt" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.1.1" }
serde = "1.0"
thiserror = "1.0"
copper = { path = "../" }
reqwest = { version = "0.11.12", features = ["json"] }
rustls = "0.20.7"
